// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing level 1 rendering Level 1 renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <RCTScrollView
    style={
      {
        "alignContent": "center",
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "backgroundColor": "#D0DDD0",
            "borderRadius": 10,
            "color": "#323933",
            "fontSize": 18,
            "letterSpacing": 0.5,
            "margin": 20,
            "padding": 10,
          }
        }
      >
        Знаємо, що тим, які люблять Бога, котрі покликані за Його постановою, все сприяє до добра.
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 2,
        "gap": 10,
        "justifyContent": "center",
        "paddingHorizontal": 20,
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`testing level 1 rendering Level 1 renders correctly 2`] = `
<View
  style={
    {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignContent": "center",
        "justifyContent": "center",
        "maxHeight": 200,
      }
    }
  >
    <Text
      style={
        {
          "color": "#323933",
          "fontSize": 22,
          "fontWeight": "500",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Romans 8:28
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 2,
        "gap": 10,
        "justifyContent": "center",
        "paddingHorizontal": 20,
        "width": "100%",
      }
    }
  />
</View>
`;
